add do_page_fault.md and anon_page.md

--- a/kernel/memory/10. 缺页中断/1. do_page_fault().md
+++ b/kernel/memory/10. 缺页中断/1. do_page_fault().md
@@ -372,3 +372,30 @@ unlock:
 }
 ```
 
+handle_pte_fault()函数中第7行的注释说明有的处理器体系结构会大于8Byte的pte表项，例如ppc44x定义了CONFIG_PTE_64BIT和CONFIG_32BIT，所以READ_ONCE()和ACCESS_ONCE()并不保证访问的原子性，所以这里需要一个内存屏障以保证正确读取了pte表项内容后才会执行后面的判断语句。
+
+后续的代码可以分为三部分来理解：
+
+1. 第17~29行代码是pte_present()为0的情况，页不在内存中，即pte表项中的LPTE_PRESENT位没有置位，所以pte还没有映射物理页面，这是真正的缺页。
+
+（1）如果pte内容为空，即pte_none()。
+
+- 对于文件映射，通常VMA的vm_ops操作函数定义了fault()函数指针，那么调用do_fault()函数。
+- 对于匿名页面，调用do_anonymous_page()函数。
+
+（2）如果pte内容不为空且PRESENT没有置位，说明该页被交换到swap分区，则调用do_swap_page()函数。
+
+2. 第31~40行代码，这里是pte有映射物理贝面，但因为之前的pte改置只读，现在需要可写操作，所以触发了写时复制缺页中断。例如父子进程之间共享的内存，当其中一方需要写入新内容时，就会触发写时复制。
+
+第35行代码，如果传进来的flag设置了可写的属性且当前pte是只读的，那么调用do_wp_page())函数并返回。
+
+如果当前pte的属性是可写的，那么通过pte_mkdirty0函数来设置L_PTE_DIRTY比特位。页在内存中且pte也具有可写属性，什么情况下会运行到第39行代码呢？此问题留给读者思考。
+
+3. 第41~53行代码，pte_mkyoung0对于×86体系结构是设置_PAGE_ACCESSED位的，这相对简单些。对于ARM体系结构是设置Linux版本的页表中PTE页表项的L_PTE_YOUNG位，是否需要写入ARM硬件版本的页表由set pte_at())函数来决定。
+
+第42~43行代码，如果pte内容发生变化，则需要把新的内容写入到pte表项中，并且要flush对应的TLB和cache。
+
+对于ARM32体系结构来说，上述内容是一个很重要且值得关注的地方，也是模拟Linux版本页表的L_PTE_YOUNG的关键点之一，读者可以结合第2.2.1节和第2.13.1节来阅读。
+    缺页中断的整体流程图如图2.19所示。
+
+![缺页中断流程图](picture/缺页中断流程图.png)
