--- a/kernel/memory/10. 缺页中断/2. 匿名页面缺页中断.md
+++ b/kernel/memory/10. 缺页中断/2. 匿名页面缺页中断.md
@@ -77,3 +77,72 @@ oom:
 第12行代码，check_stack_guard_page()函数判断当前VMA是否需要添加一个guard page作为安全垫。
 
 根据参数flags是否需要可写权限，代码可以分为如下两部分。
+
+（1）分配属性是只读的，例如第16~22行代码。当需要分配的内存只有只读属性，系统会使用一个全填充为0的全局页面empty_zero_page，称为零页面（ZERO_PAGE）。这个零页面是一个special mapping的页面，读者可以看第2.8节中关于vm_normal_page()函数的介绍。那么这个零页面是怎么来的呢？
+
+```
+[arch/arm/mm/mmu.c]
+/*
+ * empty_zero_page is a special page that is used for
+ * zero-initialized data and COW.
+ */
+struct page *empty_zero_page;
+EXPORT_SYMBOL(empty_zero_page);
+```
+
+```
+[include/asm-generic/pgtable.h]
+extern struct page *empty_zero_page;
+#define ZERO_PAGE(vaddr)	(empty_zero_page)
+#define my_zero_pfn(addr)	page_to_pfn(ZERO_PAGE(addr))
+```
+
+在系统启动时，paging_init()函数分配一个页面用作零页面。
+
+```
+/*
+ * paging_init() sets up the page tables, initialises the zone memory
+ * maps, and sets up the zero page, bad page and bad page tables.
+ */
+void __init paging_init(const struct machine_desc *mdesc)
+{
+	void *zero_page;
+
+	.....
+
+	/* allocate the zero page. */
+	zero_page = early_alloc(PAGE_SIZE);
+	.....
+	empty_zero_page = virt_to_page(zero_page);
+	__flush_dcache_page(NULL, empty_zero_page);
+}
+```
+
+第17行代码，使用零页面来生成一个新的PTE entry，然后使用pte_mkspecial()设置新PTE entry中的PTE_SPECIAL位。在2级页表的ARM32实现中没有PTE_SPECIAL比特位，而在ARM64的实现中有比特位。
+
+```
+[arch/arm64/include/asm/pgtable.h]
+static inline pte_t pte_mkspecial(pte_t pte)
+{
+	return set_pte_bit(pte, __pgprot(PTE_SPECIAL));
+}
+[arch/arm/include/asm/pgtable-21evel.h]
+static inline pte_t pte_mkspecial(pte_t pte) { return pte; }
+```
+
+第19行代码pte_offset_map_lock()获取当前pte页表项，注意这里获取了一个spinlock锁，所以在函数返回时需要释放这个锁，例如第59行代码中的pte_unmap_unlock()。
+
+```
+#define pte_offset_map_lock(mm, pmd, address, ptlp)	\
+({							\
+	spinlock_t *__ptl = pte_lockptr(mm, pmd);	\
+	pte_t *__pte = pte_offset_map(pmd, address);	\
+	*(ptlp) = __ptl;				\
+	spin_lock(__ptl);				\
+	__pte;						\
+})
+```
+
+如果获取的pte表项内容不为空，那么跳转到setpte标签处去设置硬件pte表项，即把新的PTE entry 设置到硬件页表中。
+
+（2）分配属性是可写的，见第26~52行代码。使用alloc_zeroed_user_highpage_movable()函数来分配
