--- a/kernel/memory/10. 缺页中断/2. 匿名页面缺页中断.md
+++ b/kernel/memory/10. 缺页中断/2. 匿名页面缺页中断.md
@@ -145,4 +145,8 @@ static inline pte_t pte_mkspecial(pte_t pte) { return pte; }
 
 如果获取的pte表项内容不为空，那么跳转到setpte标签处去设置硬件pte表项，即把新的PTE entry 设置到硬件页表中。
 
-（2）分配属性是可写的，见第26~52行代码。使用alloc_zeroed_user_highpage_movable()函数来分配
+（2）分配属性是可写的，见第26~52行代码。使用alloc_zeroed_user_highpage_movable()函数来分配一个可写的匿名页面。其分配页面的掩码是（__GFP_MOVABLE|_GFP_WAIT|_GFP_IO|_GFP_FSI_GFP_ HARDWALLI_GFP_HIGHMEM),最终还是调用伙伴系统的核心API函数alloc_pages()，所以这里分配的页面会优先使用高端内存。然后通过mk_pte()、pte_mkdirty()和pte_mkwrite()等宏生成一个新PTE entry，并通过set_pte_at()函数设置到硬件页表中。inc_mm_counter_fast()增加系统中匿名页面的统计计数，匿名页面的计数类型是MM_ANONPAGES。page_add_new_anon_rmap()把匿名页面添加到RMAP反向映射系统中。lru_cache_addactive_or_unevictable()把匿名页面添加到LRU链表中，在kswap内核模块中会用到LRU链表。
+
+如图2.20所示是do_anonympus_page()函数流程图。
+
+![do_anonymous_page()](picture/do_anonymous_page().png)
