--- a/kernel/memory/10. 缺页中断/3. 文件映射缺页中断.md
+++ b/kernel/memory/10. 缺页中断/3. 文件映射缺页中断.md
@@ -170,3 +170,177 @@ static int __do_fault(struct vm_area_struct *vma, unsigned long address,
 }
 ```
 
+最终调用vma->vm ops->fault()函数新建一个page cache。第19行代码，如果返回值ret不包含VM_FAULT_LOCKED，那么调用lock_page()函数为page加锁PG_locked，否则，在打开了CONFIG_DEBUG_VM的情况下，会去检查这个page是否已经locked了。
+
+回到do_read_fault()函数的第27行代码，重新读取当前缺页异常地址addr对应pte的值与以前读出来的值是否一致。如果不一致，说明这期间有人修改了pte，那么刚才通过do fault()函数分配的页面就没用了。
+
+第33行代码，do_set_pte()利用刚才分配的页面新生成一个PTE entry设置到硬件页表项中。
+
+下面来看私有映射且发生写时复制COW的情况。
+
+```
+[handle_pte_fault()->do_fault()->do_cow_fault()]
+static int do_cow_fault(struct mm_struct *mm, struct vm_area_struct *vma,
+		unsigned long address, pmd_t *pmd,
+		pgoff_t pgoff, unsigned int flags, pte_t orig_pte)
+{
+	struct page *fault_page, *new_page;
+	struct mem_cgroup *memcg;
+	spinlock_t *ptl;
+	pte_t *pte;
+	int ret;
+
+	if (unlikely(anon_vma_prepare(vma)))
+		return VM_FAULT_OOM;
+
+	new_page = alloc_page_vma(GFP_HIGHUSER_MOVABLE, vma, address);
+	if (!new_page)
+		return VM_FAULT_OOM;
+
+	if (mem_cgroup_try_charge(new_page, mm, GFP_KERNEL, &memcg)) {
+		page_cache_release(new_page);
+		return VM_FAULT_OOM;
+	}
+
+	ret = __do_fault(vma, address, pgoff, flags, new_page, &fault_page);
+	if (unlikely(ret & (VM_FAULT_ERROR | VM_FAULT_NOPAGE | VM_FAULT_RETRY)))
+		goto uncharge_out;
+
+	if (fault_page)
+		copy_user_highpage(new_page, fault_page, address, vma);
+	__SetPageUptodate(new_page);
+
+	pte = pte_offset_map_lock(mm, pmd, address, &ptl);
+	if (unlikely(!pte_same(*pte, orig_pte))) {
+		pte_unmap_unlock(pte, ptl);
+		if (fault_page) {
+			unlock_page(fault_page);
+			page_cache_release(fault_page);
+		} else {
+			/*
+			 * The fault handler has no page to lock, so it holds
+			 * i_mmap_lock for read to protect against truncate.
+			 */
+			i_mmap_unlock_read(vma->vm_file->f_mapping);
+		}
+		goto uncharge_out;
+	}
+	do_set_pte(vma, address, new_page, pte, true, true);
+	mem_cgroup_commit_charge(new_page, memcg, false);
+	lru_cache_add_active_or_unevictable(new_page, vma);
+	pte_unmap_unlock(pte, ptl);
+	if (fault_page) {
+		unlock_page(fault_page);
+		page_cache_release(fault_page);
+	} else {
+		/*
+		 * The fault handler has no page to lock, so it holds
+		 * i_mmap_lock for read to protect against truncate.
+		 */
+		i_mmap_unlock_read(vma->vm_file->f_mapping);
+	}
+	return ret;
+uncharge_out:
+	mem_cgroup_cancel_charge(new_page, memcg);
+	page_cache_release(new_page);
+	return ret;
+}
+```
+
+
+
+do_cow fault()函数在处理私有文件映射的VMA中发生了写时复制。
+
+第10行代码，anon_vma_prepare()函数检查该VMA是否初始化了RMAP反向映射。
+
+第13行代码，为GFP_HIGHUSER|__GFP_MOVABLE的新页面new page分配一个分配掩码，也就是优先使用高端内存highmem。
+
+第22行代码，do_fault()函数通过vma->vm_ops->fault()函数读取文件内容到fault_page页面里。
+
+第26~27行代码，把fault page页面的内容复制到刚才新分配的页面new page中
+
+第30~44行代码，重新获取该异常地址对应的页表项pte，如果当前pte的内容和之前的org_pte内容不一样，说明期间有人修改了pte，那么释放new page和fault page并返回。
+
+第45行代码，利用newpage新生成一个PTE entry并设置到硬件页表项pte中，并且把newpage加入到活跃的LRU链表中，然后释放fault page。
+
+下面来看共享文件映射中发生写缺页异常的情况。
+
+```
+[handle_pte_fault()->do_fault()->do_shared_fault()]
+static int do_shared_fault(struct mm_struct *mm, struct vm_area_struct *vma,
+		unsigned long address, pmd_t *pmd,
+		pgoff_t pgoff, unsigned int flags, pte_t orig_pte)
+{
+	struct page *fault_page;
+	struct address_space *mapping;
+	spinlock_t *ptl;
+	pte_t *pte;
+	int dirtied = 0;
+	int ret, tmp;
+
+	ret = __do_fault(vma, address, pgoff, flags, NULL, &fault_page);
+	if (unlikely(ret & (VM_FAULT_ERROR | VM_FAULT_NOPAGE | VM_FAULT_RETRY)))
+		return ret;
+
+	/*
+	 * Check if the backing address space wants to know that the page is
+	 * about to become writable
+	 */
+	if (vma->vm_ops->page_mkwrite) {
+		unlock_page(fault_page);
+		tmp = do_page_mkwrite(vma, fault_page, address);
+		if (unlikely(!tmp ||
+				(tmp & (VM_FAULT_ERROR | VM_FAULT_NOPAGE)))) {
+			page_cache_release(fault_page);
+			return tmp;
+		}
+	}
+
+	pte = pte_offset_map_lock(mm, pmd, address, &ptl);
+	if (unlikely(!pte_same(*pte, orig_pte))) {
+		pte_unmap_unlock(pte, ptl);
+		unlock_page(fault_page);
+		page_cache_release(fault_page);
+		return ret;
+	}
+	do_set_pte(vma, address, fault_page, pte, true, false);
+	pte_unmap_unlock(pte, ptl);
+
+	if (set_page_dirty(fault_page))
+		dirtied = 1;
+	/*
+	 * Take a local copy of the address_space - page.mapping may be zeroed
+	 * by truncate after unlock_page().   The address_space itself remains
+	 * pinned by vma->vm_file's reference.  We rely on unlock_page()'s
+	 * release semantics to prevent the compiler from undoing this copying.
+	 */
+	mapping = fault_page->mapping;
+	unlock_page(fault_page);
+	if ((dirtied || vma->vm_ops->page_mkwrite) && mapping) {
+		/*
+		 * Some device drivers do not set page.mapping but still
+		 * dirty their pages
+		 */
+		balance_dirty_pages_ratelimited(mapping);
+	}
+
+	if (!vma->vm_ops->page_mkwrite)
+		file_update_time(vma->vm_file);
+
+	return ret;
+}
+```
+
+do _shared fault)函数处理在一个可写的共享映射中发生缺页中断的情况。
+
+第11行代码，首先通过__do_fault()函数读取文件内容到fault page页面中。
+
+第19~27行代码，如果VMA的操作函数中定义了page_mkwrite()方法，那么调用page_mkwrite()来通知进程地址空间，page将变成可写的。一个页面变成可写的，那么进程有可能需要等待这个page的内容回写成功（writeback）。
+
+第29~35行代码，判断该异常地址对应的硬件页表项pte的内容是否与之前的pte一致。
+
+第36行代码，利用fault page新生成一个PTE entry并设置到硬件页表项pte中，注意这里设置PTE为可写属性。
+
+第39行代码，设置page为脏页面。
+
+第49~55行代码，通过balance_dirty_pages_ratelimited0函数来平衡并回写一部分脏页面。
