--- a/kernel/memory/10. 缺页中断/4. 写时复制.md
+++ b/kernel/memory/10. 缺页中断/4. 写时复制.md
@@ -32,3 +32,43 @@ static int do_wp_page(struct mm_struct *mm, struct vm_area_struct *vma,
 	}
 ```
 
+首先通过vm_normal_page()函数查找缺页异常地址addr对应页面的 struct page 数据结构，返回normal mapping页面。vm_normal_page()函数返回page指针为NULL，说明这是一个special mapping的页面。
+
+第15~24行代码，这里考虑的页面是可写且共享的special页面。如果VMA的属性是可写且共享的，那么跳转到reuse标签处，reuse标签处会继续使用这个页面，不会做写时复制的操作。否则就跳转到gotten标签处，gotten标签处会分配一个新的页面进行写时复制操作。
+
+```
+[do_wp_page()]
+/*
+	 * Take out anonymous pages first, anonymous shared vmas are
+	 * not dirty accountable.
+	 */
+	if (PageAnon(old_page) && !PageKsm(old_page)) {
+		if (!trylock_page(old_page)) {
+			page_cache_get(old_page);
+			pte_unmap_unlock(page_table, ptl);
+			lock_page(old_page);
+			page_table = pte_offset_map_lock(mm, pmd, address,
+							 &ptl);
+			if (!pte_same(*page_table, orig_pte)) {
+				unlock_page(old_page);
+				goto unlock;
+			}
+			page_cache_release(old_page);
+		}
+		if (reuse_swap_page(old_page)) {
+			/*
+			 * The page is all ours.  Move it to our anon_vma so
+			 * the rmap code will not search our parent or siblings.
+			 * Protected against the rmap code by the page lock.
+			 */
+			page_move_anon_rmap(old_page, vma, address);
+			unlock_page(old_page);
+			goto reuse;
+		}
+		unlock_page(old_page);
+```
+
+第34行代码，判断当前页面是否为不属于KSM的匿名页面。利用page->mapping成员的最低2个比特位来判断匿名页面使用PageAnon()宏，定义在include/linux/mm.h文件中。
+
+第35行代码，trylock_page(old_page)函数判断当前的old_page是否已经加锁，trylock_page()返回false，说明这个页面已经被别的进程加锁，所以第38行代码会使用lock_page()等待其他进程释放了锁才有机会获取锁。第36行代码，page_cache_get()增加 page数据结构中\_count计数。
+    trylock_page()和lock_page()这两个函数看起来很像，但它们有着很大的区别。trylock_page()定义在include/linux/pagemap.h文件中，它使用test_and_ set bit_lock()为page的flags原子地设置PG_locked标志位，并返回这个标志位的原来值。如果page的PG_locked位已经置位，那么当前进程调用trylock_lock()返回false，说明有别的进程已经锁住了这个page。
