--- a/kernel/memory/10. 缺页中断/4. 写时复制.md
+++ b/kernel/memory/10. 缺页中断/4. 写时复制.md
@@ -71,4 +71,52 @@ static int do_wp_page(struct mm_struct *mm, struct vm_area_struct *vma,
 第34行代码，判断当前页面是否为不属于KSM的匿名页面。利用page->mapping成员的最低2个比特位来判断匿名页面使用PageAnon()宏，定义在include/linux/mm.h文件中。
 
 第35行代码，trylock_page(old_page)函数判断当前的old_page是否已经加锁，trylock_page()返回false，说明这个页面已经被别的进程加锁，所以第38行代码会使用lock_page()等待其他进程释放了锁才有机会获取锁。第36行代码，page_cache_get()增加 page数据结构中\_count计数。
-    trylock_page()和lock_page()这两个函数看起来很像，但它们有着很大的区别。trylock_page()定义在include/linux/pagemap.h文件中，它使用test_and_ set bit_lock()为page的flags原子地设置PG_locked标志位，并返回这个标志位的原来值。如果page的PG_locked位已经置位，那么当前进程调用trylock_lock()返回false，说明有别的进程已经锁住了这个page。
+
+trylock_page()和lock_page()这两个函数看起来很像，但它们有着很大的区别。trylock_page()定义在include/linux/pagemap.h文件中，它使用test_and_ set bit_lock()为page的flags原子地设置PG_locked标志位，并返回这个标志位的原来值。如果page的PG_locked位已经置位，那么当前进程调用trylock_lock()返回false，说明有别的进程已经锁住了这个page。
+
+```
+[include/asm-generic/bitops/lock.h]
+#define test_and_set_bit_lock(nr, addr)	test_and_set_bit(nr, addr)
+[include/1inux/pagemap.h]
+static inline int trylock_page(struct page *page)
+{
+	return (likely(!test_and_set_bit_lock(PG_locked, &page->flags)));
+}
+```
+
+PG_locked比特位属于struct page数据结构中的flags成员，内核中利用flags成员定义了很多不同用途的标志位，定义在include/linux/page-flags.h头文件中。
+
+```
+[include/linux/page-flags.h]
+enum pageflags {
+	PG_locked,		/* Page is locked. Don't touch. */
+	PG_error,
+	PG_referenced,
+	PG_uptodate,
+	PG_dirty,
+	PG_lru,
+	PG_active,
+	.....
+```
+
+lock_page()会睡眠等待锁持有者释放该页锁。
+
+```
+[mm/filemap.c]
+void __lock_page(struct page *page)
+{
+	DEFINE_WAIT_BIT(wait, &page->flags, PG_locked);
+
+	__wait_on_bit_lock(page_waitqueue(page), &wait, bit_wait_io,
+							TASK_UNINTERRUPTIBLE);
+}
+[include/1inux/pagemap.h]
+static inline void lock_page(struct page *page)
+{
+	might_sleep();
+	if (!trylock_page(page))
+		__lock_page(page);
+}
+```
+
+回到do_wp_page()函数中，第47行代码reuse_swap_page()函数判断old_page页面是否只有一个进程映射匿名页面。如果只是单独映射，可以跳转到reuse标签处继续使用这个页面并且不需要写时复制。本章把只有一个进程映射的匿名页面称为单身匿名页面。
