--- a/kernel/memory/11. page引用计数/1. struct page数据结构.md
+++ b/kernel/memory/11. page引用计数/1. struct page数据结构.md
@@ -284,3 +284,17 @@ flags这个成员除了存放上述重要的标志位之外，还有另外一个
 ![ARM Vexpress平台pageflags布局示意图](picture/ARM Vexpress平台pageflags布局示意图.png)
 
 可以通过set_page_zone()函数把zone编号设置到page->flags中，也可以通过 page_zone()函数知道某个页面所属的zone。
+
+```
+static inline struct zone *page_zone(const struct page *page)
+{
+	return &NODE_DATA(page_to_nid(page))->node_zones[page_zonenum(page)];
+}
+static inline void set_page_zone(struct page *page, enum zone_type zone)
+{
+	page->flags &= ~(ZONES_MASK << ZONES_PGSHIFT);
+	page->flags |= (zone & ZONES_MASK) << ZONES_PGSHIFT;
+}
+```
+
+回到struct page数据结构定义中，mapping成员表示页面
