--- a/kernel/memory/11. page引用计数/1. struct page数据结构.md
+++ b/kernel/memory/11. page引用计数/1. struct page数据结构.md
@@ -297,4 +297,4 @@ static inline void set_page_zone(struct page *page, enum zone_type zone)
 }
 ```
 
-回到struct page数据结构定义中，mapping成员表示页面
+回到struct page数据结构定义中，mapping成员表示页面所指向的地址空间
