--- a/kernel/memory/11. page引用计数/1. struct page数据结构.md
+++ b/kernel/memory/11. page引用计数/1. struct page数据结构.md
@@ -297,4 +297,22 @@ static inline void set_page_zone(struct page *page, enum zone_type zone)
 }
 ```
 
-回到struct page数据结构定义中，mapping成员表示页面所指向的地址空间
+回到struct page数据结构定义中，mapping成员表示页面所指向的地址空间（address_space）。内核中的地址空间通常有两个不同的地址空间，一个用于文件映射页面，例如在读取文件时，地址空间用于将文件的内容数据与装载数据的存储介质区关联起来；另一个用于匿名映射。内核使用了一个简单直接的方式实现了“一个指针，两种用途”，mapping指针地址的最低两位用于判断是否指向匿名映射或KSM页面的地址空间，如果是匿名页面，那么mapping 指向匿名页面的地址空间数据结构struct anon_vma。
+
+```
+#define PAGE_MAPPING_ANON	1
+#define PAGE_MAPPING_KSM	2
+#define PAGE_MAPPING_FLAGS	(PAGE_MAPPING_ANON | PAGE_MAPPING_KSM)
+static inline void *page_rmapping(struct page *page)
+{
+	return (void *)((unsigned long)page->mapping & ~PAGE_MAPPING_FLAGS);
+}
+```
+
+page数据结构中第5行代码的s_mem用于slab分配器，slab中第一个对象的开始地址，s_mem和mapping共同占用一个字的存储空间。
+
+page数据结构中第9~32行代码是第2个双字的区间，由两个联合体组成。index表示这个页面在一个映射中的序号或偏移量；freelist用于slab分配器；pfmemalloc是页面分配器中的一个标志。第20行和第28行代码的\__mapcount和\_count是非常重要的引用计数。
+
+第35~48行代码是第3个双字区块，lru用于页面加入和删除LRU链表，其余一些成员用于slab或slub分配器
+
+第51行代码是page数据结构中剩余的成员，private用于指向私有数据的指针。
