--- a/kernel/memory/11. page引用计数/2. __count和__mapcount的区别.md
+++ b/kernel/memory/11. page引用计数/2. __count和__mapcount的区别.md
@@ -57,3 +57,49 @@ static inline void set_page_refcounted(struct page *page)
 ```
 
 （2）加入LRU链表时，page页面会被kswapd内核线程使用，因此\_count引用计数会加1。以malloc为用户程序分配内存为例，发生缺页中断后do_anonymous_page()函数成功分配出来一个页面，在设置硬件pte表项之前，调用lru_cache_add()函数把这个匿名页面添加到LRU链表中，在这个过程中，使用page_cache_get()宏来增加_count引用计数。
+
+```
+[发生缺页中断->handle_mm_fault(）->handle_pte_fault()->do_anonymous_page()->lru_cache_add_active_or_unevictable()]
+static void __lru_cache_add(struct page *page)
+{
+	struct pagevec *pvec = &get_cpu_var(lru_add_pvec);
+
+	page_cache_get(page);
+	if (!pagevec_space(pvec))
+		__pagevec_lru_add(pvec);
+	pagevec_add(pvec, page);
+	put_cpu_var(lru_add_pvec);
+}
+void lru_cache_add_active_or_unevictable(struct page *page,
+					 struct vm_area_struct *vma)
+{
+	VM_BUG_ON_PAGE(PageLRU(page), page);
+
+	if (likely((vma->vm_flags & (VM_LOCKED | VM_SPECIAL)) != VM_LOCKED)) {
+		SetPageActive(page);
+		lru_cache_add(page);
+		return;
+	}
+
+	if (!TestSetPageMlocked(page)) {
+		/*
+		 * We use the irq-unsafe __mod_zone_page_stat because this
+		 * counter is not modified from interrupt context, and the pte
+		 * lock is held(spinlock), which implies preemption disabled.
+		 */
+		__mod_zone_page_state(page_zone(page), NR_MLOCK,
+				    hpage_nr_pages(page));
+		count_vm_event(UNEVICTABLE_PGMLOCKED);
+	}
+	add_page_to_unevictable_list(page);
+}
+
+```
+
+（3）被映射到其他用户进程pte时，count引用计数会加1。例如，子进程在被创建时共享父进程的地址空间，设置父进程的pte页表项内容到子进程中并增加该页面的_count计数，见do_fork()->copy process()->copy_mm()->dup_mmap()->copy pte_range()->copy_one_te()函数。
+
+（4）页面的private中有私有数据。
+
+- 对于PG_swapable的页面，\_add_to_swap_cache()函数会增加_count引用计数。
+- 对于PG_private的页面，主要在block模块的buffer head中使用，例如buffer_migrate_page()函数中会增加_count引用计数。
+
