--- a/kernel/memory/11. page引用计数/2. __count和__mapcount的区别.md
+++ b/kernel/memory/11. page引用计数/2. __count和__mapcount的区别.md
@@ -103,3 +103,4 @@ void lru_cache_add_active_or_unevictable(struct page *page,
 - 对于PG_swapable的页面，\_add_to_swap_cache()函数会增加_count引用计数。
 - 对于PG_private的页面，主要在block模块的buffer head中使用，例如buffer_migrate_page()函数中会增加_count引用计数。
 
+（5）内核对页面进行操作等关键路径上也会使count引用计数加1。例如内核的follow_page()函数和get_user_pages()函数。以follow_page()为例，调用者通常需要设置FOLL_GET 标志位来使其增加count引用计数。例如KSM中获取可合并的页面函数get_mergeable_page()，另一个例子是DirectIO，见第2.17节的write_protect_page()函数。
