--- a/kernel/memory/12. 反向映射RMAP/1. 父进程分配匿名页面.md
+++ b/kernel/memory/12. 反向映射RMAP/1. 父进程分配匿名页面.md
@@ -138,3 +138,10 @@ struct anon_vma_chain {
 - rb：红黑树节点，通常把anon_vma_chain添加到anon_vma->rb_root的红黑树中。
 
 回到anon_vma_prepare()函数中。
+
+第2行代码，VMA数据结构中有一个成员anon_vma用于指向anon_vma数据结构，如果VMA还没有分配过匿名页面，那么vma->anon_vma为NULL。
+
+第10行代码，分配一个struct anon_vma_chain数据结构ac。
+
+第14行代码，find_mergeable_anon_vma()函数检查是否可以复用当前vma的前继者near_vma 和后继者prev_vma的 anon_vma。能复用的判断条件比较苛刻，例如两个VMA必须相邻，VMA的内存policy 也必须相同，有相同的vm_file等，有兴趣的同学可以去看anon_vma_compatible()函数。如果相邻的VMA无法复用anon_vma，那么重新分配一个anon_vma 数据结构。
+
