--- a/kernel/memory/12. 反向映射RMAP/1. 父进程分配匿名页面.md
+++ b/kernel/memory/12. 反向映射RMAP/1. 父进程分配匿名页面.md
@@ -145,3 +145,100 @@ struct anon_vma_chain {
 
 第14行代码，find_mergeable_anon_vma()函数检查是否可以复用当前vma的前继者near_vma 和后继者prev_vma的 anon_vma。能复用的判断条件比较苛刻，例如两个VMA必须相邻，VMA的内存policy 也必须相同，有相同的vm_file等，有兴趣的同学可以去看anon_vma_compatible()函数。如果相邻的VMA无法复用anon_vma，那么重新分配一个anon_vma 数据结构。
 
+第26~33行代码，把vma->anon_vma指向到刚才分配的anon_vma,anon_vma_chain_link()函数会把刚才分配的avc添加到vma的anon_vma_chain链表中，另外把avc添加到anon_vma->rb_root红黑树中。anon_vma数据结构中有一个读写信号量rwsem，上述的操作需要获取写者锁anon_vma_lock_write)。anon_vma_chain_link()函数的定义如下：
+
+```
+static void anon_vma_chain_link(struct vm_area_struct *vma,
+				struct anon_vma_chain *avc,
+				struct anon_vma *anon_vma)
+{
+	avc->vma = vma;
+	avc->anon_vma = anon_vma;
+	list_add(&avc->same_vma, &vma->anon_vma_chain);
+	anon_vma_interval_tree_insert(avc, &anon_vma->rb_root);
+}
+```
+
+接下来看另外一个重要的API函数：page_add_new_anon_rmap()。
+
+```
+do_anonymous_page()->page_add_new_anon_rmap()]
+void page_add_new_anon_rmap(struct page *page,
+	struct vm_area_struct *vma, unsigned long address)
+{
+	VM_BUG_ON_VMA(address < vma->vm_start || address >= vma->vm_end, vma);
+	SetPageSwapBacked(page);
+	atomic_set(&page->_mapcount, 0); /* increment count (starts at -1) */
+	if (PageTransHuge(page))
+		__inc_zone_page_state(page, NR_ANON_TRANSPARENT_HUGEPAGES);
+	__mod_zone_page_state(page_zone(page), NR_ANON_PAGES,
+			hpage_nr_pages(page));
+	__page_set_anon_rmap(page, vma, address, 1);
+}
+```
+
+SetPageSwapBacked()设置page的标志位PG_SwapBacked，表示这个页面可以swap到磁盘。atomic_set()设置page的mapcount 引用计数为0，_mapcount的初始化值为-1。__mod_zone _page state()增加页面所在的zone的匿名页面的计数，匿名页面计数类型为NR_ANON_PAGES,page_set_anon_map()函数设置这个页面为匿名映射。
+
+```
+[page_add_new_anon_rmap()->__page_set_anon_rmap()]
+static void __page_set_anon_rmap(struct page *page,
+	struct vm_area_struct *vma, unsigned long address, int exclusive)
+{
+	struct anon_vma *anon_vma = vma->anon_vma;
+
+	BUG_ON(!anon_vma);
+
+	if (PageAnon(page))
+		return;
+
+	/*
+	 * If the page isn't exclusively mapped into this vma,
+	 * we must use the _oldest_ possible anon_vma for the
+	 * page mapping!
+	 */
+	if (!exclusive)
+		anon_vma = anon_vma->root;
+
+	anon_vma = (void *) anon_vma + PAGE_MAPPING_ANON;
+	page->mapping = (struct address_space *) anon_vma;
+	page->index = linear_page_index(vma, address);
+}
+```
+
+第18~19行代码，将anon_vma的指针的值加上PAGE_MAPPING_ANON，然后把指针值赋给page->mapping。struct page 数据结构中的mapping成员用于指定页面所在的地址空间。内核中所谓的地址空间通常有两个不同的地址空间，一个用于文件映射页面，另一个用于匿名映射。mapping指针的最低两位用于判断是否指向匿名映射或KSM页面的地址空间，如果mapping指针最低1位不为0，那么mapping指向匿名页面的地址空间数据结构struct anon_vma。内核提供一个函数PageAnon()函数，用于判断一个页面是否为匿名页面，见第7行代码。关于KSM页面的内容详见第2.17节。
+
+```
+[include/linux/mm.h]
+#define PAGE_MAPPING_ANON	1
+#define PAGE_MAPPING_KSM	2
+#define PAGE_MAPPING_FLAGS	(PAGE_MAPPING_ANON | PAGE_MAPPING_KSM)
+static inline int PageAnon(struct page *page)
+{
+	return ((unsigned long)page->mapping & PAGE_MAPPING_ANON) != 0;
+}
+```
+
+page_set_anon_rmap()函数中的第20行代码，linear_page_index()函数计算当前地址address是在VMA中的第几个页面，然后把offset值赋值到page->index中，详见第2.17.2节中关于page->index的问题。
+
+```
+static inline pgoff_t linear_page_index(struct vm_area_struct *vma,
+					unsigned long address)
+{
+	pgoff_t pgoff;
+	if (unlikely(is_vm_hugetlb_page(vma)))
+		return linear_hugepage_index(vma, address);
+	pgoff = (address - vma->vm_start) >> PAGE_SHIFT;
+	pgoff += vma->vm_pgoff;
+	return pgoff >> (PAGE_CACHE_SHIFT - PAGE_SHIFT);
+}
+```
+
+父进程分配匿名页面的状态如图2.24所示，归纳如下：
+
+![](.\picture\父进程分配匿名页面.png)
+
+- 父进程的每个VMA中有一个anon_vma数据结构（下文用AVp来表示），vma->anon_vma指向AVp。
+- 和VMAp相关的物理页面page->mapping都指向AVp。
+- 有一个anon_vma_chain 数据结构AVC，其中avc->vma指向VMA，avc->av指向AVp。
+-  AVC添加到VMAp->anon_vma_chain链表中。
+- AVC添加到AVp->anon_vma红黑树中。
