--- a/kernel/memory/12. 反向映射RMAP/2. 父进程创建子进程.md
+++ b/kernel/memory/12. 反向映射RMAP/2. 父进程创建子进程.md
@@ -1,6 +1,149 @@
 父进程通过fork系统调用创建子进程时，子进程会复制父进程的进程地址空间VMA数据结构的内容作为自己的进程地址空间，并且会复制父进程的pte页表项内容到子进程的页表中，实现父子进程共享页表。多个不同子进程中的虚拟页面会同时映射到同一个物理页面，另外多个不相干的进程的虚拟页面也可以通过KSM机制映射到同一个物理页面中，这里暂时只讨论前者。为了实现RMAP反向映射系统，在子进程复制父进程的VMA时，需要添加hook钩子。
 
+fork 系统调用实现在kernel/fork.c文件中，在dup_mmap()中复制父进程的进程地址空间函数，实现逻辑如下：
+
 ```
+[do_fork(）->copy_process()->copy _mm()->dup_mm()->dup_mmap()]
+static int dup_mmap(struct mm_struct *mm, struct mm_struct *oldmm)
+{
+	struct vm_area_struct *mpnt, *tmp, *prev, **pprev;
+	struct rb_node **rb_link, *rb_parent;
+	int retval;
+	.....
+	prev = NULL;
+	for (mpnt = oldmm->mmap; mpnt; mpnt = mpnt->vm_next) {
+		.....
+		tmp = kmem_cache_alloc(vm_area_cachep, GFP_KERNEL);
+		if (!tmp)
+			goto fail_nomem;
+		*tmp = *mpnt;
+		INIT_LIST_HEAD(&tmp->anon_vma_chain);
+		tmp->vm_mm = mm;
+		if (anon_vma_fork(tmp, mpnt))
+			goto fail_nomem_anon_vma_fork;
+		tmp->vm_flags &= ~VM_LOCKED;
+		tmp->vm_next = tmp->vm_prev = NULL;
+		file = tmp->vm_file;
+		....
+		*pprev = tmp;
+		pprev = &tmp->vm_next;
+		tmp->vm_prev = prev;
+		prev = tmp;
+
+		__vma_link_rb(mm, tmp, rb_link, rb_parent);
+		rb_link = &tmp->vm_rb.rb_right;
+		rb_parent = &tmp->vm_rb;
+
+		mm->map_count++;
+		retval = copy_page_range(mm, oldmm, mpnt);
+
+		....
+	}
+	/* a new mm has just been created */
+	arch_dup_mmap(oldmm, mm);
+	retval = 0;
+}
+```
+
+第7~31行代码，for循环遍历父进程的进程地址空间VMAs。
+
+第9行代码，新建一个临时用的vm_area_struct 数据结构tmp。
+
+第10行代码，把父进程的VMA数据结构内容复制到子进程刚创建的VMA数据结构tmp中。
+
+第11行代码，初始化tmp VMA中的anon_vma_chain链表。
+
+第13行代码，anon_vma_fork()函数为子进程创建相应的anon_vma数据结构。
+
+第25行代码，把VMA添加到子进程的红黑树中。
+
+第29行代码，复制父进程的pte页表项到子进程页表中。
+
+anon_vma_fork()函数的实现首先会调用anon_vma_clone()，下面来看这个函数。
+
+`[dup_mmap()->anon_vma_clone()]`
+
+```
+int anon_vma_clone(struct vm_area_struct *dst, struct vm_area_struct *src)
+{
+	struct anon_vma_chain *avc, *pavc;
+	struct anon_vma *root = NULL;
+
+	list_for_each_entry_reverse(pavc, &src->anon_vma_chain, same_vma) {
+		struct anon_vma *anon_vma;
+
+		avc = anon_vma_chain_alloc(GFP_NOWAIT | __GFP_NOWARN);
+		if (unlikely(!avc)) {
+			unlock_anon_vma_root(root);
+			root = NULL;
+			avc = anon_vma_chain_alloc(GFP_KERNEL);
+			if (!avc)
+				goto enomem_failure;
+		}
+		anon_vma = pavc->anon_vma;
+		root = lock_anon_vma_root(root, anon_vma);
+		anon_vma_chain_link(dst, avc, anon_vma);
+	}
+	if (dst->anon_vma)
+		dst->anon_vma->degree++;
+	unlock_anon_vma_root(root);
+	return 0;
+}
+```
+
+anon _vma_clone()函数参数dst表示子进程的VMA，src表示父进程的VMA。
+
+第5行代码，遍历父进程VMA中的anon_vma_chain 链表寻找anon_vma_chain实例。父进程在为VMA分配匿名页面时，do_anonymous_page()->anon_vma_prepare()函数会分配一个anon_vma_chain 实例并挂入到VMA的anon_vma_chain链表中，因此可以很容易地通过链表找到anon_vma_chain实例，在代码中这个实例叫作pavc。
+
+第8行代码，分配一个属于子进程的avc数据结构。
+
+第16行代码，通过pavc 找到父进程VMA中的anon_vma。
+
+第18行代码，anon_vma_chain_link()函数把属于子进程的avc挂入子进程的VMA的anon_vma_chain链表中，同时也把avc 添加到属于父进程的anon_vma->rb_root的红黑树中，使子进程和父进程的VMA之间有一个联系的纽带。
+
+`[dup_mmap()->anon_vma_fork()`
+
+```
+int anon_vma_fork(struct vm_area_struct *vma, struct vm_area_struct *pvma)
+{
+	struct anon_vma_chain *avc;
+	struct anon_vma *anon_vma;
+	int error;
+
+	/* Don't bother if the parent process has no anon_vma here. */
+	if (!pvma->anon_vma)
+		return 0;
+
+	error = anon_vma_clone(vma, pvma);
+	if (error)
+		return error;
+
+	/* An existing anon_vma has been reused, all done then. */
+	if (vma->anon_vma)
+		return 0;
+
+	/* Then add our own anon_vma. */
+	anon_vma = anon_vma_alloc();
+	if (!anon_vma)
+		goto out_error;
+	avc = anon_vma_chain_alloc(GFP_KERNEL);
+	if (!avc)
+		goto out_error_free_anon_vma;
+
+	anon_vma->root = pvma->anon_vma->root;
+	anon_vma->parent = pvma->anon_vma;
+	get_anon_vma(anon_vma->root);
+	
+	/* Mark this anon_vma as the one where our new (COWed) pages go. */
+	vma->anon_vma = anon_vma;
+	anon_vma_lock_write(anon_vma);
+	anon_vma_chain_link(vma, avc, anon_vma);
+	anon_vma->parent->degree++;
+	anon_vma_unlock_write(anon_vma);
+
+	return 0;
+}
 
 ```
 
+继续来看anon_vma_fork()函数的实现，参数vma表示子进程的VMA，参数pvma表示父进程的VMA。这里分配属于子进程的anon_vma和avc，然后通过anon_vma_chain_link()把avc挂入子进程的vma->anon_vma_chain 链表中，同时也加入子进程的anon_vma->rb_root红黑树中。至此，子进程的VMA和父进程的VMA之间的纽带建立完成。
