--- a/kernel/memory/13. 回收页面/1. LRU链表.md
+++ b/kernel/memory/13. 回收页面/1. LRU链表.md
@@ -56,4 +56,15 @@ static void __lru_cache_add(struct page *page)
 }
 ```
 
-这里使用了页向量（pagevec）数据结构，借助一个数组来保存特定数目的页，可以对这些页面执行同样的操作。页问量会以“批处理的方式”执行，比单独处理一个页的方式效率要高。页向量数据结构的定义如下：
+这里使用了页向量（pagevec）数据结构，借助一个数组来保存特定数目的页，可以对这些页面执行同样的操作。页向量会以“批处理的方式”执行，比单独处理一个页的方式效率要高。页向量数据结构的定义如下：
+
+```
+#define PAGEVEC_SIZE	14
+struct pagevec {
+	unsigned long nr;
+	unsigned long cold;
+	struct page *pages[PAGEVEC_SIZE];
+};
+```
+
+\_Iru_cache_add()函数第5行代码判断页向量pagevec是否还有空间，如果没有空间，那么首先调用\__pagevec_lru_add()函数把原有的page加入到LRU链表中，然后把新页面添加到页向量pagevec中。
